--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <html>
     <head>
         <title>Mage Game</title>
+        <link rel="stylesheet" href="style.css">
+          <script src="script.js"></script>
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
     </head>
     <body>
